--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type='text/javascript' src='//pl27965862.effectivegatecpm.com/1a/30/71/1a30710cefe7ce7738a67185b787a2ca.js'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MasterCalc Pro | Professional Utility Suite</title>
@@ -633,4 +634,17 @@
         lucide.createIcons();
     </script>
 </body>
+    <script async="async" data-cfasync="false" src="//pl27965861.effectivegatecpm.com/683b2512cf0fd9da0fe31fb9494fb99f/invoke.js"></script>
+<div id="container-683b2512cf0fd9da0fe31fb9494fb99f"></div>
+    <script type='text/javascript' src='//pl27965939.effectivegatecpm.com/6b/47/76/6b4776f0a65f13a10e1c24b090f214b3.js'></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'ba5990509caffe787fc37b4ca5396d07',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/ba5990509caffe787fc37b4ca5396d07/invoke.js"></script>
 </html>
