--- a/index.html
+++ b/index.html
@@ -1,6 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- ========== SEO / Open Graph / Twitter / Structured Data (Paste inside <head>) ========== -->
+<!-- Basic -->
+<meta name="description" content="REPLACE_ME_SHORT_DESCRIPTION"> 
+<meta name="keywords" content="calculator, gst calculator, emi calculator, percentage calculator, area calculator, MasterCalc Pro, online tools">
+<meta name="author" content="REPLACE_ME_AUTHOR">
+<link rel="canonical" href="https://REPLACE_ME_YOUR_DOMAIN/">
+
+<!-- Mobile & indexing -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="robots" content="index, follow">
+<meta name="theme-color" content="#4f46e5">
+
+<!-- Social / Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="MasterCalc Pro — REPLACE_ME_SHORT_TITLE">
+<meta property="og:description" content="REPLACE_ME_SHORT_DESCRIPTION">
+<meta property="og:url" content="https://REPLACE_ME_YOUR_DOMAIN/">
+<meta property="og:site_name" content="MasterCalc Pro">
+<meta property="og:image" content="https://REPLACE_ME_YOUR_DOMAIN/path/to/preview-image.png">
+<meta property="og:locale" content="en_IN">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@REPLACE_ME_TWITTER_HANDLE">
+<meta name="twitter:creator" content="@REPLACE_ME_AUTHOR_HANDLE">
+<meta name="twitter:title" content="MasterCalc Pro — REPLACE_ME_SHORT_TITLE">
+<meta name="twitter:description" content="REPLACE_ME_SHORT_DESCRIPTION">
+<meta name="twitter:image" content="https://REPLACE_ME_YOUR_DOMAIN/path/to/preview-image.png">
+
+<!-- Favicons & preconnect -->
+<link rel="icon" href="/favicon.ico" sizes="any">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" as="style">
+
+<!-- Structured Data: Organization / Website -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "MasterCalc Pro",
+  "url": "https://REPLACE_ME_YOUR_DOMAIN/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://REPLACE_ME_YOUR_DOMAIN/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+<!-- ========== End SEO block ========== -->
+
     <script type='text/javascript' src='//pl27965862.effectivegatecpm.com/1a/30/71/1a30710cefe7ce7738a67185b787a2ca.js'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -648,3 +699,4 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/ba5990509caffe787fc37b4ca5396d07/invoke.js"></script>
 </html>
+
