--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 	<!-- ========== SEO / Open Graph / Twitter / Structured Data (Paste inside <head>) ========== -->
 <!-- Basic -->
 <meta name="description" content="REPLACE_ME_SHORT_DESCRIPTION"> 
@@ -699,4 +703,5 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/ba5990509caffe787fc37b4ca5396d07/invoke.js"></script>
 </html>
+
 
