--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HVF7NSQKNC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HVF7NSQKNC');
+</script>
 	<meta name="google-site-verification" content="0uz0VzvjT5HN5Nt7qHpmk0AcuT_tPv91edxgpUCpuW8" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -704,6 +713,7 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/ba5990509caffe787fc37b4ca5396d07/invoke.js"></script>
 </html>
+
 
 
 
